[package]
name = "em_filter"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
embryo = { git = "ssh://git@github.com/EmergenceSystem/Embryo.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web="4.0"
reqwest = "0.11"
